Fixes issue #19. Also properly centers titles.
The anchor tags on the sides of the body have been removed. I'm still
confused on how they were there. It would make sense if <a> was a block
element, but it's not (as far as I know). And it was only clickable on
some parts of the body sides.

I fixed the issue by targeting the title anchor tag and setting it to
display: block; Then I was able to resize it to fit the title box.

Also, the title box is now properly centered in the header. I had to
manually center it by finding the correct amount of pixels to push it
from the top using margin-top. For some reason, there was extra space on
the bottom, and I still don't know why.

--- a/css/coffee_type.css
+++ b/css/coffee_type.css
@@ -17,6 +17,13 @@ header {
     font-style: italic;
 }
 
+body > a {
+    display: block;
+    margin: auto;
+    width: 1120px;
+    max-width: 1120px;
+}
+
 a {
     text-decoration: none;
     color: inherit
@@ -30,6 +37,7 @@ h1 {
     min-width: 920px;
     padding: 25px;
     margin: 25px;
+    margin-top: 33px;
     border: #815028 inset 10px;
     font-size: 100px;
     text-align: center;
@@ -82,9 +90,10 @@ main {
     align-items: center;
 }
 
-.article-images a:hover img {
-    transform: scale(1.5);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+.article-images > div:hover {
+    transform: scale(1.25);
+    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); */
+    border-style: none;
 }
 
 h2 {
