--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,9 +1,10 @@
 /* CSS Styles for the Homepage (index.html) */
 
 body {
-    margin: 150px auto;
+    margin: 200px auto;
+    margin-bottom: 0;
     width: 1500px;
-    height: 900px;
+    height: 500px;
     background-color: #210F04;
     color: #F0C894;
 }
@@ -13,15 +14,25 @@ header {
     max-width: 1100px;
     height: 250px;
     margin: 0 auto;
-    margin-top: 100px;
+    margin-bottom: 25px;
+    padding-bottom: 0;
     background-color: #452103;
     border: #140B00 solid 10px;
     font-style: italic;
+    
+}
+
+
+body > a {
+    display: block;
+    margin: auto;
+    width: 1120px;
+    max-width: 1120px;
 }
 
 a {
     text-decoration: none;
-    color: inherit
+    color: inherit;
 }
 
 a:hover {
@@ -33,6 +44,7 @@ h1 {
     min-width: 920px;
     padding: 25px;
     margin: 25px;
+    margin-top: 33px;
     border: #815028 inset 10px;
     font-size: 100px;
     text-align: center;
@@ -40,8 +52,9 @@ h1 {
 
 
 nav {
+    min-width: 1000px;
     max-width: 1500px;
-    height: 300px;
+    height: 180px;
     margin: 0 auto;
     display: flex;
 }
@@ -79,7 +92,8 @@ footer {
 }
 
 footer > p {
-    max-width: 1500px;
+    min-width: 1000px;
+    max-width: 1300px;
     padding: 0 25px; 
     margin: 25px auto;
     text-align: center;
