--- a/css/sources.css
+++ b/css/sources.css
@@ -16,6 +16,13 @@ header {
     border: #140B00 solid 10px;
 }
 
+body > a {
+    display: block;
+    margin: auto;
+    width: 1120px;
+    max-width: 1120px;
+}
+
 a {
     text-decoration: none;
     color: inherit;
@@ -39,6 +46,7 @@ h1 {
     min-width: 920px;
     padding: 25px;
     margin: 25px;
+    margin-top: 33px;
     border: #815028 inset 10px;
     font-size: 100px;
     text-align: center;
